profile-screen align fixed

--- a/profile-screen/css/style.css
+++ b/profile-screen/css/style.css
@@ -63,19 +63,21 @@ header .user-info-header .badge {
     align-items: center;
     background-color: #f5f5f5;
     height: calc(100vh - 80px);
+    width: 100%;
 }
 
 .user-details {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 170%;
+    width: 40%;
+    height: 55%;
     max-width: 600px;
-    margin-bottom: 20px;
 }
 
 .user-photo {
@@ -83,7 +85,6 @@ header .user-info-header .badge {
     flex-direction: column;
     align-items: center;
     position: relative;
-    margin-top: 10px;
 }
 
 .photo-placeholder {
@@ -91,7 +92,8 @@ header .user-info-header .badge {
     height: 120px;
     background-color: #ccc;
     border-radius: 50%;
-    margin-bottom: 56px;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     overflow: hidden;
 }
 
@@ -125,7 +127,7 @@ header .user-info-header .badge {
     gap: 10px;
     cursor: pointer;
     transition: all 0.3s;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .folderContainer {
@@ -189,6 +191,7 @@ header .user-info-header .badge {
 
 .user-info {
     width: 90%;
+    margin-bottom: 1.5rem;
 }
 
 .info-item {
@@ -241,10 +244,12 @@ header .user-info-header .badge {
 }
 
 .user-about-actions {
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-left: 2rem;
+    width: 40%;
+    height: 55%;
 }
 
 .actions {
@@ -252,8 +257,7 @@ header .user-info-header .badge {
     align-content: flex-start;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    margin-left: -34%;
+    width: 100%;
 }
 
 .actions button {
@@ -289,14 +293,14 @@ header .user-info-header .badge {
 
 .user-about {
     background-color: #f5f5f5;
-    padding: 15px;
-    border-radius: 10px;
+    width: 100%;
 }
 
 .user-about textarea {
-    width: 65%;
+    width: 100%;
     max-height: 159px;
     padding: 10px;
+    box-sizing: border-box;
     border-radius: 10px;
     border: 1px solid #ccc;
     background-color: #f5f5f5;
@@ -305,8 +309,16 @@ header .user-info-header .badge {
     font-size: 16px;
 }
 
+.about-label {
+    display: block;
+    font-weight: 600;
+    font-size: 1.17em;
+    margin-bottom: 1rem;
+}
+
 #save-about-button {
-    margin-top: 10px;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     padding: 10px 20px;
     background-color: #6a0dad;
     color: white;
@@ -314,54 +326,14 @@ header .user-info-header .badge {
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
-    margin-left: 40%;
+}
+
+.button-align {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
 }
 
 #save-about-button:hover {
     background-color: #5a009d;
-}
-
-@media (min-width: 37.5em) {
-    .profile-section {
-        flex-wrap: nowrap;
-        flex-direction: row;
-    }
-
-    .user-details,
-    .user-about-actions {
-        width: 48%;
-        margin-bottom: 0;
-    }
-}
-
-@media (min-width: 48em) {
-    header {
-        flex-wrap: nowrap;
-    }
-
-    .user-details,
-    .user-about-actions {
-        width: 45%;
-    }
-}
-
-@media (max-width: 37.5em) {
-    header nav ul {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    header nav ul li {
-        margin-right: 0;
-        margin-bottom: 10px;
-    }
-
-    .profile-section {
-        flex-direction: column;
-    }
-
-    .user-details,
-    .user-about-actions {
-        width: 100%;
-    }
 }
